--- a/android-engineer.html
+++ b/android-engineer.html
@@ -75,7 +75,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tealium/97fb69fe-f024-4480-bfe5-4ddf2e9e24ad'>Tealium - Senior Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tealium/97fb69fe-f024-4480-bfe5-4ddf2e9e24ad'>Tealium - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -107,7 +107,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medopad/9321840f-9f98-4eb0-8e06-f02089e1e200'>Medopad - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/medopad/9321840f-9f98-4eb0-8e06-f02089e1e200'>Medopad - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -137,7 +137,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">France France Paris, France</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vts/ba52b4bc-bd6b-4f04-825a-da920fdf81f0'>VTS - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/vts/ba52b4bc-bd6b-4f04-825a-da920fdf81f0'>VTS - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -157,7 +157,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/?utm_source=dlvr.it&utm_medium=twitter'>Android Software Engineer - Permutive</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/?utm_source=dlvr.it&utm_medium=twitter'>Android Software Engineer - Permutive</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -177,7 +177,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-sp/job/o4robfwO'>Trek Bicycle carreras - Android Mobile Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-sp/job/o4robfwO'>Trek Bicycle carreras - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -206,7 +206,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dahmakan/jobs/4005607002'>Job Application for Android Engineer at dahmakan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dahmakan/jobs/4005607002'>Job Application for Android Engineer at dahmakan</a></h5> 
 <p><span class="badge badge-light">Malaysia</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -214,11 +214,11 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476184002'>Job Application for Senior Android Engineer at Blink Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476184002'>Job Application for Senior Android Engineer at Blink Health</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -226,7 +226,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
+<h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Great communication and English skills; Great iOS or Android experience with 
 code to prove it; Javascript experience a plus; You know how to architect all?...</p>
@@ -239,7 +239,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Mountain View , CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/onefootball/jobs/1920667'>Job Application for Senior Android Engineer - AdTech at Onefootball</a></h5> 
+<h5><a href='https://boards.greenhouse.io/onefootball/jobs/1920667'>Job Application for Senior Android Engineer - AdTech at Onefootball</a></h5> 
 <p><span class="badge badge-light">Berlin  ?  Berlin</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -318,7 +318,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4473010002'>Job Application for Android Software Engineer at Oodle Finance</a></h5> 
+<h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4473010002'>Job Application for Android Software Engineer at Oodle Finance</a></h5> 
 <p><span class="badge badge-light">London  London Oxford</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -342,7 +342,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Kyiv Kyiv city, Ukraine Palo Alto</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/onefootball/jobs/1908616'>Job Application for Android Engineer at Onefootball</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/onefootball/jobs/1908616'>Job Application for Android Engineer at Onefootball</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -374,7 +374,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/b34a45b5-9c54-4a9c-bd77-c86f49c883ce'>Xfers - Senior Android Engineer - Singapore</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/b34a45b5-9c54-4a9c-bd77-c86f49c883ce'>Xfers - Senior Android Engineer - Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -440,7 +440,7 @@ mission to help parents teach financial literacy to kids.</p>
 work on innovative mobile projects that would impact tens of millions of people's
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/kmdhhbk559fat3yi4ns71qer7o'>Senior Android Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/kmdhhbk559fat3yi4ns71qer7o'>Senior Android Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
